Fix background and add letter spacing

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
    background-color: hsl(185, 75%, 39%);
    background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
    background-repeat: no-repeat;
-   background-position: right 52vw bottom 30vh,left 50vw  top 48vh;
+   background-position: right 52vw bottom 10vh,left 50vw  top 48vh;
    font-family: 'Kumbh Sans', sans-serif;
    font-size: 18px;
    padding: 150px 0 0;
@@ -85,6 +85,7 @@ body {
 .card .info-flp .flp-name  {
    font-size: 12px;
    color:hsl(0, 0%, 59%);
+   letter-spacing: 1px;
 }
 
 footer {
